# wol-monkey

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  coverage.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: auth.py  health.py  machines.py  setup.py  system.py  wake.py  web.py
app/domain/: machine.py  ports.py  probe.py  wake_attempt.py
app/infra/: state_probe.py  wake_strategy.py
app/persistence/: database.py  models.py  repositories.py
app/security/: auth_service.py  csrf.py  dependencies.py  password.py  tokens.py
app/services/: auth.py  ensure_online.py  settings.py  setup_state.py  wake.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html  error.html  login.html  machine_form.html  machines.html  settings.html  setup_wizard.html  ssh_setup.html  tokens.html
deploy/: docker-compose.yml
docs/: _take_screenshots.py
docs/architecture/: adr-index.md
docs/guides/: ssh-auto-wake.md
migrations/: env.py
migrations/versions/: 09d75b0dfde5_add_user_id_to_api_tokens.py  1409d10906fb_add_machine_id_to_api_tokens.py  7da1313001d6_rename_udp_to_udp_broadcast_strategy.py  a079c458d58b_initial_schema.py
scripts/: screenshots.py
tests/: _security_audit.py  conftest.py
tests/api/: test_auth_endpoints.py  test_machines.py  test_setup_endpoints.py
tests/integration/: conftest.py  test_repositories.py
tests/security/: test_auth.py
tests/unit/: test_domain.py  test_ensure_online.py  test_health.py  test_settings.py  test_setup_state.py  test_system_helpers.py  test_wake_service.py  test_wake_strategy.py
worker/: job_queue.py  main.py
